Returned code to original form

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,18 @@ bin/
 .gradle
 /build/
 
+/gradle/
+/.idea/
+/.idea/*
+/.idea/misc.xml
+/.idea/modules.xml
+.idea/vcs.xml
+.idea/gumball-machine-clean-solution.iml
+.idea/.gitignore
+.DS_Store
+
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.ipr
+/out/
